feature/version_2.0.1: update liquibase dependency version cause vulnerability danger

--- a/infrastructure/adapter-repository-postgres/pom.xml
+++ b/infrastructure/adapter-repository-postgres/pom.xml
@@ -15,6 +15,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mapstruct.version>1.5.4.Final</mapstruct.version>
   </properties>
 
   <dependencies>
@@ -40,12 +41,12 @@
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct-processor</artifactId>
-      <version>1.5.4.Final</version>
+      <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
-      <version>1.5.4.Final</version>
+      <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
       <groupId>jakarta.validation</groupId>
@@ -55,6 +56,8 @@
     <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
+      <!--Upgraded cause vulnerabilities. This is the latest version of liquibase.-->
+      <version>4.23.0</version>
     </dependency>
   </dependencies>
 
